httpbin-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "http.test.com"
  gateways:
  - istio-ingress/ingress-gateway
  http:
  - route:
    - destination:
        host: httpbin
        port:
          number: 8000
